add rmat conversion